# LocTree3

./: AUTHORS  COPYING  ChangeLog  Makefile  Makefile.am  Makefile.in  README  README.md  config.status  configure  configure.ac  loctree2data  loctree3  loctree3.1  loctree3rc.default
autom4te.cache/: output.1  requests  traces.0  traces.1
data/: Makefile.am  arch.SP13_11.DB.phr  arch.SP13_11.DB.pin  arch.SP13_11.fa  bact.SP13_11.DB.phr  bact.SP13_11.DB.psq  bact.SP13_11.fa
debian/: changelog  control  files  rules
debian/loctree2/DEBIAN/: control  md5sums
debian/loctree2/usr/share/doc/loctree2/: AUTHORS  README  copyright
debian/loctree2/usr/share/doc/loctree2/examples/arch/: arch_example.fa  arch_example.profile
debian/loctree2/usr/share/loctree2/: loctree2data  loctree2rc.default
debian/loctree3/DEBIAN/: control  md5sums
debian/loctree3/usr/share/doc/loctree3/: copyright
debian/loctree3/usr/share/loctree3/: Makefile  Makefile.am  Makefile.in  arch.SP13_11.DB.psq  bact.SP13_11.DB.pin  euka.SP13_11.DB.pin  loctree2data  loctree3rc.default
examples/: Makefile  Makefile.am  Makefile.in
examples/arch/: Makefile  Makefile.am  Makefile.in  arch_example.lc3  arch_output.lc2
examples/bact/: Makefile  Makefile.am  Makefile.in  bact_example.lc3  bact_example.lc3.pb
examples/euka/: Makefile  Makefile.am  Makefile.in  euka_example.lc2  euka_example.lc3  euka_example.lc3.pb  euka_example.profile  euka_example2.fasta  euka_example2.lc3  euka_example2.lc3.pb  euka_example3.f  euka_example3.lc3  euka_example3.lc3.svm  euka_example3.psiBlast
(+10 files in other folders)
